# game-engine

./: .gitignore  CMakeLists.txt  main.cpp
GLEW/include/: GL
GLEW/lib/: libGLEW.2.1.0.dylib  libGLEW.dylib
GLFW/include/: GLFW
GLFW/lib/: libglfw.3.3.dylib  libglfw.3.dylib  libglfw.dylib
src/core/: kengine.cpp  kengine.h
src/graphics/: shader.cpp  shader.h  window.cpp  window.h
src/input/: input.cpp  input.h
src/math/: defines.h  mat4.cpp  mat4.h  math.h  transform.cpp  transform.h  vec.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vecop.h
src/shaders/: fragment.frag  vertex.vert
src/utils/: utils.h
